--- a/snake.yml
+++ b/snake.yml
@@ -16,12 +16,38 @@ jobs:
       - name: Generate Snake Animation
         uses: Platane/snk@v2.0.0
         with:
-          github_user_name: Larimcal
-          outputs: dist/snake.svg
-      - name: Push Snake Animation
-        uses: peaceiris/actions-gh-pages@v3.8.0
+          github_user_name: Larimcal  
+          output: github-contribution-grid-snake.svg  
+      - name: Save SVG as Artifact
+        uses: actions/upload-artifact@v2
         env:
           ACTIONS_DEPLOY_KEY: ${{ ACTIONS_DEPLOY_KEY }}  
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: dist
+
+
+name: Publish Snake Animation
+
+on:
+  push:
+    branches:
+      - main 
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Download SVG Artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: snake-svg  # Nome do artefato salvo no passo anterior
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: .  # Publica na raiz do repositório
