--- a/snake.yml
+++ b/snake.yml
@@ -1,30 +1,29 @@
 name: Generate Snake Animation
 
 on:
-  schedule:
-    - cron: "0 0 * * *"
   push:
     branches:
-      - main  
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout Repository
         uses: actions/checkout@v2
+
       - name: Generate Snake Animation
         uses: Platane/snk@v2.0.0
         with:
-          github_user_name: Larimcal  
-          output: github-contribution-grid-snake.svg  
+          github_user_name: Larimcal  # Seu nome de usuário GitHub
+          output: dist/github-contribution-grid-snake.svg  # Caminho onde o SVG será gerado
+
       - name: Save SVG as Artifact
         uses: actions/upload-artifact@v2
-        env:
-          ACTIONS_DEPLOY_KEY: ${{ ACTIONS_DEPLOY_KEY }}  
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: dist
+          name: snake-svg
+          path: dist/github-contribution-grid-snake.svg  # Caminho onde o SVG foi gerado
+
 
 
 name: Publish Snake Animation
@@ -32,22 +31,24 @@ name: Publish Snake Animation
 on:
   push:
     branches:
-      - main 
+      - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout Repository
         uses: actions/checkout@v2
 
       - name: Download SVG Artifact
         uses: actions/download-artifact@v2
         with:
-          name: snake-svg  # Nome do artefato salvo no passo anterior
+          name: snake-svg
+          path: dist
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: .  # Publica na raiz do repositório
+          publish_dir: dist
+
